--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'com.studentRegistration'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '8'
+sourceCompatibility = "1.9"
 
 repositories {
 	mavenCentral()
@@ -28,12 +28,15 @@ dependencies {
 	implementation  'org.springframework.security:spring-security-web:3.2.3.RELEASE'
 	implementation  'org.springframework.security:spring-security-config:3.2.3.RELEASE'
 	implementation  'org.springframework.security:spring-security-taglibs:3.0.5.RELEASE'
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
 	implementation  'io.jsonwebtoken:jjwt:0.9.1'
 	implementation  'javax.xml.bind:jaxb-api:2.3.0'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
+targetCompatibility = JavaVersion.VERSION_1_9
